@@ -24,6 +24,8 @@ Broker:
 - Fix UNSUBACK messages not being logged. Closes #903.
 - Fix possible endian issue when reading the `memory_limit` option.
 - Fix building for libwebsockets < 1.6.
+- Fix accessor functions for username and client id when used in plugin auth
+  check.
 
 Library:
 - Fix some places where return codes were incorrect, including to the
